--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>YouTube 影片</title>
 </head>
-<body>
+<body onload="showalert()">
     <a href="logout.html" targer="_blank">登出</a>
     <h1>您已成功登入「睡眠音樂」</h1>
     <br>
@@ -17,5 +17,11 @@
 <br><br><a href="https://www.youtube.com/watch?v=EWtEcA8tXc8&list=PL4Ty6N3yT5CJJXt-7xX8FLHiPCBUlficX&index=3&ab_channel=GhibliChildhood" target="_blank">吉卜力OST音樂盒全集（5h）</a>
 <br><br><a href="https://www.youtube.com/watch?v=HJEEI1bJxY0&list=PL4Ty6N3yT5CJJXt-7xX8FLHiPCBUlficX&index=4&ab_channel=DreamSleep%26Relax" target="_blank">世界最強催眠曲（5h）</a>
 
+  <script>
+    function showalert(){
+        alert("登入成功，您登入的帳號為：guest")
+    }
+  </script>
+  
 </body>
 </html>
