--- a/login.html
+++ b/login.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <link href="https://s10.aconvert.com/convert/p3r68-cdx67/a0v2m-lxhke-001.ico" rel="shortcut icon"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>睡眠音樂</title>
     <style>
         body {
