--- a/logout.html
+++ b/logout.html
@@ -15,6 +15,7 @@
 <script>
     function yes() {
       alert("確認登出？");
+      alert("您已登出")
       location.href='no-auth.html'
     }
     </script>
