--- a/no-auth.html
+++ b/no-auth.html
@@ -7,10 +7,17 @@
     <title>YouTube 影片</title>
 </head>
 <body>
-    <a href="login.html" targer="_blank">登入</a>
+<a href="login.html"
+<a rel="noopener" href="login.html">登入</a>
     <h1>歡迎蒞臨「睡眠音樂」</h1>
     <br>
 <p>您尚未登入，請點選最上方的「登入」按鈕，進行登入和授權</p><br>
 <h2>您無權查看，</h2><a href="login.html">請按此連結</a>進行授權動作<br>
+<script>
+    function yes() {
+      alert("確認登入？");
+      location.href='login.html';
+    }
+    </script>
 </body>
 </html>
